--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -11,6 +11,8 @@
                 p {
                     margin-left: 5px;
                     margin-bottom: 0;
+                    color: var(--color-2);
+                    font-weight: 600;
                 }
             }
             .top-menu {
@@ -19,9 +21,12 @@
                 align-items: center;
                 list-style: none;
                 > li {
+                    margin-right: 6px;
+                    &:last-child {
+                        margin-right: 0;
+                    }
                     > a {
                         padding: 5px;
-                        text-decoration: unset;
                         color: var(--color-2);
                         font-size: 14px;
                         font-weight: 600;
@@ -36,8 +41,8 @@
             .column-3 {
                 display: flex;
                 flex-flow: row nowrap;
-                justify-content: flex-end;
                 align-items: center;
+                justify-content: flex-end;
                 > a:nth-of-type(1) {
                     margin-right: 12px;
                     text-transform: uppercase;
