--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,5 +1,5 @@
 :root {
-    --color-1: #8be013;
+    --color-1: #9bee09;
     --color-2: #b9b0c5;
     --color-3: #224714;
     --font-1: "Inter", serif;
