--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,6 @@
 @import "~bootstrap/scss/bootstrap";
 
 body {
-  background-color: gray;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
     "Droid Sans", "Helvetica Neue", sans-serif;
@@ -10,7 +9,7 @@ body {
 }
 
 .container {
-  max-width: 1100px;
+  max-width: 1267px;
 }
 
 p {
@@ -24,9 +23,9 @@ a {
 }
 
 ul {
-  list-style: none;
-  margin: 0;
+  list-style-type: none;
   padding: 0;
+  margin: 0;
 }
 
 // Buttons
@@ -54,4 +53,12 @@ ul {
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+// Hero Section
+#hero-section {
+  background-image: url("./components/img/bg-hero-section.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
