--- a/src/App.scss
+++ b/src/App.scss
@@ -2,8 +2,7 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
-    "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: var(--font-1);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -33,6 +32,8 @@ ul {
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
+  width: 100%;
+  max-width: fit-content;
   background-color: var(--color-1);
   border: solid #da881c;
   border-width: 1px 1px 2px 1px;
