--- a/src/App.scss
+++ b/src/App.scss
@@ -18,7 +18,6 @@ p {
 a {
   text-decoration: unset;
   color: #fff;
-  font-family: var(--font-1);
 }
 
 ul {
@@ -43,7 +42,6 @@ ul {
   font-weight: 600;
   color: var(--color-3);
   text-transform: uppercase;
-  font-family: var(--font-1);
   &:hover,
   &:active,
   &:focus {
@@ -58,8 +56,9 @@ code {
 
 // Hero Section
 #hero-section {
-  background-image: url("./components/img/bg-hero-section.png");
+  background-image: url("./components/img/bg-hero-3.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  height: 88vh;
 }
